feat(datacomponent): Add data components to item meta
# Conflicts:
#	src/main/java/org/mockbukkit/mockbukkit/inventory/meta/ItemMetaMock.java